Add the missing HRRR and RAP process-obs executables

--- a/process-obs/HRRR-Smoke/src/Makefile
+++ b/process-obs/HRRR-Smoke/src/Makefile
@@ -1,5 +1,9 @@
 SHELL=/bin/sh
-EXES=FRE_BBM_HRRR_v4.exe proc_J01_FRP_HRRR_v3.exe proc_MODIS_FRP_HRRR_v3.exe proc_NPP_FRP_HRRR_v3.exe
+EXES=FRE_BBM_HRRR_v4.exe \
+merge_FRP_HRRR_v3.exe \
+proc_J01_FRP_HRRR_v3.exe \
+proc_MODIS_FRP_HRRR_v3.exe \
+proc_NPP_FRP_HRRR_v3.exe
 
 # These four will be replaced by the caller:
 FC=ifort
