--- a/prep-chem/Prep_smoke_FRP/bin/prep_chem_sources.inp.IN
+++ b/prep-chem/Prep_smoke_FRP/bin/prep_chem_sources.inp.IN
@@ -9,7 +9,7 @@
 
 !---------------- grid_type of the grid output
    grid_type= 'lambert',
-   rams_anal_prefix = '/Users/saulofreitas/work/test2/dataout/ANL/test',
+   rams_anal_prefix = '/dev/null/ANL/test',
 !---------------- date of emission
     ihour=%hh%,
     iday=%dd%,
@@ -17,58 +17,30 @@
     iyear=%yyyy%,
 
  !---------------- select the sources datasets to be used
-!   use_retro=1,  ! 1 = yes, 0 = not
-!   retro_data_dir='./datain/EMISSION_DATA/RETRO/anthro',
-
-!   use_edgar =0,  ! 0 - not,
-                  ! 1 - Version 3,
-                  ! 2 - Version 4 for some species
-                  ! 3 - Version HTAP
-
-!   edgar_data_dir='./datain/EMISSION_DATA/EDGAR/anthro/hdf',
-
-!   use_gocart=0,
-!   gocart_data_dir='./datain/EMISSION_DATA/GOCART/emissions',
-
-!   use_streets =0,
-!   streets_data_dir='./datain/EMISSION_DATA/STREETS',
-
-!   use_seac4rs =0,
-!   seac4rs_data_dir='./datain/EMISSION_DATA/SEAC4RS',
-
-
-!   use_fwbawb =0,
-!   fwbawb_data_dir ='./datain/EMISSION_DATA/Emissions_Yevich_Logan',
 
     use_retro =0,  ! 1 = yes, 0 = not
-    retro_data_dir='/gpfs/dell2/emc/modeling/noscrub/Samuel.Trahan/prep-chem/HRRR-smoke/Emission_data/RETRO/anthro',
+    retro_data_dir='/dev/null/RETRO/anthro',
 
     use_edgar =0,  ! 0 - not, 1 - Version 3, 2 - Version 4 for some species
-    edgar_data_dir='/gpfs/dell2/emc/modeling/noscrub/Samuel.Trahan/prep-chem/HRRR-smoke/Emission_data/EDGARV4',
+    edgar_data_dir='/dev/null/Emission_data/EDGARV4',
 
     use_gocart =0,
-    gocart_data_dir='/gpfs/dell2/emc/modeling/noscrub/Samuel.Trahan/prep-chem/HRRR-smoke/Emission_data/GOCART/emissions',
+    gocart_data_dir='/dev/null/Emission_data/GOCART/emissions',
 
     use_streets =0,
-    streets_data_dir='/gpfs/dell2/emc/modeling/noscrub/Samuel.Trahan/prep-chem/HRRR-smoke/Emission_data/STREETS',
+    streets_data_dir='/dev/null/Emission_data/STREETS',
 
     use_seac4rs =0,
-    seac4rs_data_dir='/gpfs/dell2/emc/modeling/noscrub/Samuel.Trahan/prep-chem/HRRR-smoke/Emission_data/SEAC4RS',
+    seac4rs_data_dir='/dev/null/Emission_data/SEAC4RS',
 
     use_fwbawb =0,
-    fwbawb_data_dir ='/gpfs/dell2/emc/modeling/noscrub/Samuel.Trahan/prep-chem/HRRR-smoke/Emission_data/Emissions_Yevich_Logan',
+    fwbawb_data_dir ='/dev/null/Emission_data/Emissions_Yevich_Logan',
 
    use_bioge =0, ! 1 - geia, 2 - megan
-   ! ######
-   ! # BIOGENIC = 1
-   !bioge_data_dir ='./datain/EMISSION_DATA/biogenic_emissions',
-   ! # MEGAN = 2
-   ! ######
-   bioge_data_dir='./datain/EMISSION_DATA/MEGAN/2000',
-   ! ######
+   bioge_data_dir='/dev/null/EMISSION_DATA/MEGAN/2000',
 
    use_gfedv2=0,
-   gfedv2_data_dir='./datain/EMISSION_DATA/GFEDv2-8days',
+   gfedv2_data_dir='/dev/null/EMISSION_DATA/GFEDv2-8days',
 
    use_bbem=2,  ! 1=traditional methodology ; 2 = FRE methodology
    use_bbem_plumerise=1,
@@ -78,18 +50,11 @@
 !---------------- if  the merging of gfedv2 with bbem is desired (=1, yes, 0 = no)
    merge_GFEDv2_bbem =0,
 
-!---------------- Fire product for BBBEM/BBBEM-plumerise emission models
-!   bbem_wfabba_data_dir   ='./GOES/f',
-!   bbem_modis_data_dir    ='./datain/EMISSION_DATA/FIRES/MODIS/Fires',
-!   bbem_inpe_data_dir     ='./datain/EMISSION_DATA/FIRES/DSA/Focos',
-!   bbem_fre_data_dir      ='./PIX/f',
-!   bbem_extra_data_dir    ='NONE',
-
-   bbem_fre_data_dir      ='/gpfs/dell2/emc/modeling/noscrub/Samuel.Trahan/prep-chem/Prep_smoke_FRP/bin/f'
-   bbem_wfabba_data_dir   ='/gpfs/dell2/emc/modeling/noscrub/Samuel.Trahan/prep-chem/public/data/sat/ssec/goes-east/wf_abba/f',
-   bbem_modis_data_dir    ='/gpfs/dell2/emc/modeling/noscrub/Samuel.Trahan/prep-chem/public/data/sat/firms/global/Global_MCD14DL_',
-   bbem_inpe_data_dir     ='/gpfs/dell2/emc/modeling/noscrub/Samuel.Trahan/prep-chem/HRRR-smoke/Emission_data/fires_data/DSA/Focos',
-   bbem_extra_data_dir    ='/gpfs/dell2/emc/modeling/noscrub/Samuel.Trahan/prep-chem/HRRR-smoke/Emission_data/fires_data/BLMALASKA/current.dat',
+   bbem_fre_data_dir      ='./f'
+   bbem_wfabba_data_dir   ='/dev/null/sat/ssec/goes-east/wf_abba/f',
+   bbem_modis_data_dir    ='/dev/null/sat/firms/global/Global_MCD14DL_',
+   bbem_inpe_data_dir     ='/dev/null/HRRR-smoke/Emission_data/fires_data/DSA/Focos',
+   bbem_extra_data_dir    ='/dev/null/HRRR-smoke/Emission_data/fires_data/BLMALASKA/current.dat',
 
 !---------------- veg type data set (dir + prefix)
 !   veg_type_data_dir      ='./datain/SURFACE_DATA/GL_IGBP_INPE_39classes/IGBP',
@@ -98,22 +63,22 @@
 
 !---------------- vcf type data set (dir + prefix)
   use_vcf = 0,
-  vcf_type_data_dir      ='./datain/SURFACE_DATA/VCF/data_out/2005/VCF',
+  vcf_type_data_dir      ='/dev/null/SURFACE_DATA/VCF/data_out/2005/VCF',
 !---------------- olson data set (dir + prefix)
 !  olson_data_dir      ='./datain/EMISSION_DATA/OLSON2/OLSON',
-  olson_data_dir= '/gpfs/dell2/emc/modeling/noscrub/Samuel.Trahan/prep-chem/HRRR-smoke/Emission_data/OLSON2/OLSON',
+  olson_data_dir= '/dev/null/OLSON'
 
 !---------------- carbon density data set (dir + prefix)
 
 !   carbon_density_data_dir='./datain/SURFACE_DATA/GL_OGE_INPE/OGE',
-   carbon_density_data_dir='/gpfs/dell2/emc/modeling/noscrub/Samuel.Trahan/prep-chem/HRRR-smoke/Emission_data/SURFACE_DATA/GL_OGE_INPE/OGE',
+   carbon_density_data_dir='/dev/null/Emission_data/SURFACE_DATA/GL_OGE_INPE/OGE',
 
 !   fuel_data_dir      ='./datain/EMISSION_DATA/Carbon_density_Saatchi/amazon_biomass_final.gra',
 
 
 !---------------- gocart background
    use_gocart_bg=0,
-   gocart_bg_data_dir='/gpfs/dell2/emc/modeling/noscrub/Samuel.Trahan/prep-chem/HRRR-smoke/Emission_data/GOCART',
+   gocart_bg_data_dir='/dev/null/HRRR-smoke/Emission_data/GOCART',
 
 !---------------- volcanoes emissions
    use_volcanoes =0,
@@ -127,7 +92,7 @@
 
 !---------------- degassing volcanoes emissions
    use_degass_volcanoes =0,
-   degass_volc_data_dir ='./datain/EMISSION_DATA/VOLC_SO2',
+   degass_volc_data_dir ='/dev/null/EMISSION_DATA/VOLC_SO2',
 
 !---------------- user specific  emissions directory
 !---------------- Update for South America megacities
